Lots of stuff
Fikset databasekobling
justert registrering og pålogging